tests/ValidProofs/arrowI.fitch
|P(y)
|---
||P(x)
||---
||P(y) (R) 1
|P(x) → P(y) (→I) 2-3