tests/InvalidRules/RSubproof%3.fitch
|---
||P(d)
||---
||P(d) (R) 1
|P(d) (R) 2
